@@ -14,15 +14,15 @@ public class ReservationAndCancel {
      */
     private final FileTempReserve fileTempReserve;
     private final FileReserve fileReserve;
+    private final FileTimeTable timeTableFile;
+    private final Client client = LogInAndTimeInput.getClient();
+    ArrayList<TempTicket> confirmedTempTicketList = new ArrayList<>();
+    ArrayList<TempTicket> cancelTempTicketList = new ArrayList<>();
+    ArrayList<Ticket> cancelTicketList = new ArrayList<>();
     private ArrayList<TempTicket> clientTempReservationList;
     private ArrayList<Ticket> clientReservationList;
     private ArrayList<TempTicket> tempList;
     private ArrayList<Ticket> reserveList;
-    ArrayList<TempTicket> confirmedTempTicketList = new ArrayList<>();
-    ArrayList<TempTicket> cancelTempTicketList = new ArrayList<>();
-    ArrayList<Ticket> cancelTicketList = new ArrayList<>();
-    private final FileTimeTable timeTableFile;
-    private Client client;
 
     public ReservationAndCancel(FileInterface fileTempReserve, FileInterface fileReserve, FileInterface timeTableFile) {
         this.fileReserve = (FileReserve) fileReserve;
@@ -56,7 +56,6 @@ public class ReservationAndCancel {
     }
 
     public void init1() throws IOException {
-        client = LogInAndTimeInput.getClient();
         fileTempReserve.repos();
         fileReserve.repos();
 
@@ -83,9 +82,9 @@ public class ReservationAndCancel {
                 System.out.print("#" + rowNum + " / ");
                 System.out.print(tempTicket.line.lineNum + " / ");
                 System.out.print(tempTicket.depTime + " / ");
-                System.out.print(tempTicket.railIndices.get(0).fromStation + " / ");
+                System.out.print(tempTicket.railIndices.getFirst().fromStation + " / ");
                 System.out.print(tempTicket.arrivalTime + " / ");
-                System.out.print(tempTicket.railIndices.get(tempTicket.railIndices.size() - 1).toStation);
+                System.out.print(tempTicket.railIndices.getLast().toStation);
                 System.out.println();
                 if (minutesBetween > 20) {
                     System.out.println("- 20분이 지나 삭제되었습니다.");
@@ -231,7 +230,6 @@ public class ReservationAndCancel {
 
 
     public void init2() {
-        client = LogInAndTimeInput.getClient();
         System.out.println("가예약 취소 예약 취소를 선택하세요.");
         Scanner scanner = new Scanner(System.in);
         String input = scanner.nextLine();
@@ -281,6 +279,11 @@ public class ReservationAndCancel {
                     } else if (Pattern.matches("^[A-Z][0-9]{4}$", inputArr[0])) {
                         clientTempReservationList = fileTempReserve.getTempTicketListByLineNum(inputArr[0], client);
                         for (TempTicket tempTicket : clientTempReservationList) {
+                            try {
+                                timeTableFile.increaseExtraSeat(inputArr[0], tempTicket.getFirstRailofTicket(), tempTicket.getLastRailofTicket(), 1); //이거 맞는지 모르겠음요..
+                            } catch (IOException | FileIntegrityException e) {
+                                throw new RuntimeException(e);
+                            }
                             cancelTempTicketList.add(tempTicket);
                             tempList.remove(tempTicket);
                         }
@@ -289,7 +292,7 @@ public class ReservationAndCancel {
 
                 case 2:
                     if (Pattern.matches("^\\#[1-9]$", inputArr[0])) {
-                        flag = removeTempTicketByRowNum(inputArr);
+                        flag = removeTempTicketByRowNum(inputArr,2);
                     } else if (Pattern.matches("^[A-Z][0-9]{4}$", inputArr[0])) {
                         clientTempReservationList = fileTempReserve.getTempTicketListByLineNum(inputArr[0], client);
                         int num = Integer.parseInt(inputArr[1]);
@@ -297,6 +300,20 @@ public class ReservationAndCancel {
                         if (num > clientTempReservationList.size()) {
                             System.out.println("입력하신 표의 개수가 많습니다. 가예약하신 표의 개수만큼 입력해주세요.");
                             flag = -1;
+                        }
+
+                        for (TempTicket tempTicket : clientTempReservationList) {
+                            try {
+                                //열차번호 일치하는 것 만 좌석 증가
+                                //찾으면 바로 break
+                                if (tempTicket.getLineNum().equals(inputArr[0])){
+                                    timeTableFile.increaseExtraSeat(inputArr[0], tempTicket.getFirstRailofTicket(), tempTicket.getLastRailofTicket(),num);
+                                    break;
+                                }
+                            } catch (IOException | FileIntegrityException e) {
+                                throw new RuntimeException(e);
+                            }
+
                         }
 
                         for (int i = 0; i < num; i++) {
@@ -309,6 +326,11 @@ public class ReservationAndCancel {
                             clientTempReservationList = fileTempReserve.getTempTicketListByfromStation(fromStation, client);
 
                             for (TempTicket tempTicket : clientTempReservationList) {
+                                try {
+                                    timeTableFile.increaseExtraSeat(inputArr[0], tempTicket.getFirstRailofTicket(), tempTicket.getLastRailofTicket(), 1); //이거 맞는지 모르겠음요..
+                                } catch (IOException | FileIntegrityException e) {
+                                    throw new RuntimeException(e);
+                                }
                                 cancelTempTicketList.add(tempTicket);
                                 tempList.remove(tempTicket);
                             }
@@ -323,6 +345,11 @@ public class ReservationAndCancel {
                             clientTempReservationList = fileTempReserve.getTempTicketListBytoStation(toStation, client);
 
                             for (TempTicket tempTicket : clientTempReservationList) {
+                                try {
+                                    timeTableFile.increaseExtraSeat(inputArr[0], tempTicket.getFirstRailofTicket(), tempTicket.getLastRailofTicket(), 1); //이거 맞는지 모르겠음요..
+                                } catch (IOException | FileIntegrityException e) {
+                                    throw new RuntimeException(e);
+                                }
                                 cancelTempTicketList.add(tempTicket);
                                 tempList.remove(tempTicket);
                             }
@@ -336,13 +363,13 @@ public class ReservationAndCancel {
 
                 case 3:
                     if (Pattern.matches("^\\#[1-9]$", inputArr[0])) {
-                        flag = removeTempTicketByRowNum(inputArr);
+                        flag = removeTempTicketByRowNum(inputArr,3);
                     }
                     break;
 
                 case 4:
                     if (Pattern.matches("^\\#[1-9]$", inputArr[0])) {
-                        flag = removeTempTicketByRowNum(inputArr);
+                        flag = removeTempTicketByRowNum(inputArr,4);
                     } else if (inputArr[1].equals("출발")) {
                         try {
                             Station fromStation = new Station(inputArr[0]);
@@ -350,6 +377,11 @@ public class ReservationAndCancel {
                             clientTempReservationList = fileTempReserve.getTempTicketListByStation(fromStation, toStation, client);
 
                             for (TempTicket tempTicket : clientTempReservationList) {
+                                try {
+                                    timeTableFile.increaseExtraSeat(inputArr[0], tempTicket.getFirstRailofTicket(), tempTicket.getLastRailofTicket(), 1); //이거 맞는지 모르겠음요..
+                                } catch (IOException | FileIntegrityException e) {
+                                    throw new RuntimeException(e);
+                                }
                                 cancelTempTicketList.add(tempTicket);
                                 tempList.remove(tempTicket);
                             }
@@ -422,7 +454,7 @@ public class ReservationAndCancel {
                         clientReservationList = fileReserve.getTicketListByLineNum(inputArr[0], client);
                         for (Ticket ticket : clientReservationList) {
                             try {
-                                timeTableFile.increaseExtraSeat(inputArr[0], ticket.getFirstRailofTicket(), ticket.getLastRailofTicket(), clientReservationList.size()); //이거 맞는지 모르겠음요..
+                                timeTableFile.increaseExtraSeat(inputArr[0], ticket.getFirstRailofTicket(), ticket.getLastRailofTicket(), 1); //이거 맞는지 모르겠음요..
                             } catch (IOException | FileIntegrityException e) {
                                 throw new RuntimeException(e);
                             }
@@ -434,7 +466,7 @@ public class ReservationAndCancel {
 
                 case 2:
                     if (Pattern.matches("^\\#[1-9]$", inputArr[0])) {
-                        flag = removeTicketByRowNum(inputArr);
+                        flag = removeTicketByRowNum(inputArr,2);
                     } else if (Pattern.matches("^[A-Z][0-9]{4}$", inputArr[0])) {
                         clientReservationList = fileReserve.getTicketListByLineNum(inputArr[0], client);
                         int num = Integer.parseInt(inputArr[1]);
@@ -446,13 +478,24 @@ public class ReservationAndCancel {
 
                         for (Ticket ticket : clientReservationList) {
                             try {
-                                timeTableFile.increaseExtraSeat(inputArr[0], ticket.getFirstRailofTicket(), ticket.getLastRailofTicket(), clientReservationList.size()); //이거 맞는지 모르겠음요..
+                                //열차번호 일치하는 것 만 좌석 증가
+                                //찾으면 바로 break
+                                if (ticket.getLineNum().equals(inputArr[0])){
+                                    timeTableFile.increaseExtraSeat(inputArr[0], ticket.getFirstRailofTicket(), ticket.getLastRailofTicket(),num);
+                                    break;
+                                }
                             } catch (IOException | FileIntegrityException e) {
                                 throw new RuntimeException(e);
                             }
-                            cancelTicketList.add(ticket);
-                            reserveList.remove(ticket);
+
                         }
+                        //좌석 삭제 작업 수행
+                        for (int i = 0; i < num; i++) {
+                            cancelTicketList.add(clientReservationList.get(i));
+                            reserveList.remove(clientReservationList.get(i));
+                        }
+
+
                     } else if (inputArr[1].equals("출발")) {
                         try {
                             Station fromStation = new Station(inputArr[0]);
@@ -460,7 +503,7 @@ public class ReservationAndCancel {
 
                             for (Ticket ticket : clientReservationList) {
                                 try {
-                                    timeTableFile.increaseExtraSeat(inputArr[0], ticket.getFirstRailofTicket(), ticket.getLastRailofTicket(), clientReservationList.size()); //이거 맞는지 모르겠음요..
+                                    timeTableFile.increaseExtraSeat(inputArr[0], ticket.getFirstRailofTicket(), ticket.getLastRailofTicket(), 1); //이거 맞는지 모르겠음요..
                                 } catch (IOException | FileIntegrityException e) {
                                     throw new RuntimeException(e);
                                 }
@@ -479,7 +522,7 @@ public class ReservationAndCancel {
 
                             for (Ticket ticket : clientReservationList) {
                                 try {
-                                    timeTableFile.increaseExtraSeat(inputArr[0], ticket.getFirstRailofTicket(), ticket.getLastRailofTicket(), clientReservationList.size()); //이거 맞는지 모르겠음요..
+                                    timeTableFile.increaseExtraSeat(inputArr[0], ticket.getFirstRailofTicket(), ticket.getLastRailofTicket(), 1); //이거 맞는지 모르겠음요..
                                 } catch (IOException | FileIntegrityException e) {
                                     throw new RuntimeException(e);
                                 }
@@ -496,13 +539,13 @@ public class ReservationAndCancel {
 
                 case 3:
                     if (Pattern.matches("^\\#[1-9]$", inputArr[0])) {
-                        flag = removeTicketByRowNum(inputArr);
+                        flag = removeTicketByRowNum(inputArr,3);
                     }
                     break;
 
                 case 4:
                     if (Pattern.matches("^\\#[1-9]$", inputArr[0])) {
-                        flag = removeTicketByRowNum(inputArr);
+                        flag = removeTicketByRowNum(inputArr,4);
                     } else if (inputArr[1].equals("출발")) {
                         try {
                             Station fromStation = new Station(inputArr[0]);
@@ -511,7 +554,7 @@ public class ReservationAndCancel {
 
                             for (Ticket ticket : clientReservationList) {
                                 try {
-                                    timeTableFile.increaseExtraSeat(inputArr[0], ticket.getFirstRailofTicket(), ticket.getLastRailofTicket(), clientReservationList.size()); //이거 맞는지 모르겠음요..
+                                    timeTableFile.increaseExtraSeat(inputArr[0], ticket.getFirstRailofTicket(), ticket.getLastRailofTicket(), 1); //이거 맞는지 모르겠음요..
                                 } catch (IOException | FileIntegrityException e) {
                                     throw new RuntimeException(e);
                                 }
@@ -533,9 +576,16 @@ public class ReservationAndCancel {
             fileTempReserve.update();
             fileReserve.update();
 
+
             for (Ticket ticket : cancelTicketList) {
                 System.out.println(ticket.toString());
             }
+            for(Ticket ticket: cancelTicketList){
+                System.out.println(calcCancelFee(ticket.depTime, ticket.arrivalTime, ticket.calculatePrice()));
+            }
+
+
+
         } while (flag == -1);
 
     }
@@ -678,9 +728,9 @@ public class ReservationAndCancel {
             int index = Integer.parseInt(inputArr[i].replace("#", "")) - 1;
 
             if (index >= 0 && index < clientTempReservationList.size()) {
-                reserveList.add(clientTempReservationList.get(index));
-                confirmedTempTicketList.add(clientTempReservationList.get(index));
-                tempList.remove(clientTempReservationList.get(index));
+                reserveList.add(clientTempReservationList.get(i));
+                confirmedTempTicketList.add(clientTempReservationList.get(i));
+                tempList.remove(clientTempReservationList.get(i));
             }
         }
 
@@ -756,4 +806,33 @@ public class ReservationAndCancel {
 
     }
 
+
+    public int calcCancelFee(String departureTime, String arrivalTime, int ticketPrice) {
+
+        String nowTime = LogInAndTimeInput.getNowTime();
+
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMddHHmm");
+        LocalDateTime depTime = LocalDateTime.parse(departureTime, formatter);
+        LocalDateTime arrTime = LocalDateTime.parse(arrivalTime, formatter);
+        LocalDateTime currentTime = LocalDateTime.parse(nowTime, formatter);
+
+        long minutesDifference = java.time.Duration.between(currentTime, depTime).toMinutes();
+        long arrTimeIscurrentTime = java.time.Duration.between(currentTime, arrTime).toMinutes();
+
+        if (minutesDifference >= 1440) { // 1개월 전 ~ 출발 1일 전
+            return 0;
+        } else if (minutesDifference > 180) { // 당일 ~ 출발 3시간 전
+            return (int) Math.round(0.05*ticketPrice);
+        } else if (minutesDifference >= 0) { // 출발 3시간 이내
+            return (int) Math.round(0.1*ticketPrice);
+        } else if (minutesDifference >= -20) { // 출발 20분 이후 ~ 출발 60분 미만
+            return (int) Math.round(0.15*ticketPrice);
+        } else if (minutesDifference >= -60) { // 출발 60분 경과 후 ~ 출발 3시간 이내
+            return (int) Math.round(0.4*ticketPrice);
+        } else if (arrTimeIscurrentTime >= 0) { // 출발 3시간 경과 후 ~ 도착
+            return (int) Math.round(0.7*ticketPrice);
+        } else {
+            return ticketPrice;
+        }
+    }
 }
